Bug 97154 - [regression] Everything is red with git latest (c833c0866f2f8f829185667efe3d6dfa5979a9e8)
Summary: [regression] Everything is red with git latest (c833c0866f2f8f829185667efe3d6...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 97167 97209 97246 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-31 13:38 UTC by Greg White
Modified: 2016-08-10 08:07 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Greg White 2016-07-31 13:38:33 UTC
This is new in the last four days.

With Intel Skylake/Modesetting, everything is now red.  Reverting to 1.18 fixes the problem, as does reverting the last few days of commits.
Comment 1 Michel Dänzer 2016-08-01 02:09:09 UTC
https://patchwork.freedesktop.org/patch/101630/ fixes this.
Comment 2 Greg White 2016-08-01 08:48:47 UTC
Confirmed.  That does fix it.  Thanks!
Comment 3 Michel Dänzer 2016-08-02 00:57:02 UTC
*** Bug 97167 has been marked as a duplicate of this bug. ***
Comment 4 Michel Dänzer 2016-08-05 02:27:28 UTC
*** Bug 97209 has been marked as a duplicate of this bug. ***
Comment 5 Michel Dänzer 2016-08-05 02:28:17 UTC
Pull request submitted for the fix: https://patchwork.freedesktop.org/patch/102414/
Comment 6 Michel Dänzer 2016-08-09 01:19:40 UTC
*** Bug 97246 has been marked as a duplicate of this bug. ***
Comment 7 Michel Dänzer 2016-08-10 08:07:38 UTC
commit a446ff84de2dd29439521f6e87d75bde3bbf002c
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Fri Jul 29 17:38:21 2016 +0900

    xfree86/modes: Handle no palette case better in xf86RandR12CrtcSetGamma


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.